<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_from_border"
        android:layout_marginLeft="@dimen/padding_from_border"
        android:layout_marginRight="@dimen/padding_from_border"
        android:background="@drawable/bg_white_with_radius"
        android:orientation="vertical"
        android:padding="@dimen/padding_from_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders"
                android:textColor="@color/black"
                android:textSize="@dimen/text_under_big" />

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="Wed, 25-01-18"
                android:textColor="@color/bgNav"
                android:textSize="@dimen/text_under_big" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_from_top_header"
            android:background="@color/colorAccent">

        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_from_border"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/status_order"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=":"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/sales_order"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_from_top_text"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/so_date"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=":"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/tv_sales_order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="(SO Date )"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_from_top_text"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/so_no"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=":"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/tv_sales_order_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="PMPS/INV/01/2018/00001"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_from_top_text"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=":"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/tv_total_sales_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Rp. (Total )"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_from_border"
        android:layout_marginLeft="@dimen/padding_from_border"
        android:layout_marginRight="@dimen/padding_from_border"
        android:background="@drawable/bg_white_with_radius"
        android:orientation="vertical"
        android:padding="@dimen/padding_from_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_from_left_right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/order_by"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=": "
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:id="@+id/tv_order_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="( PIC )"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_from_border"
        android:layout_marginLeft="@dimen/padding_from_border"
        android:layout_marginRight="@dimen/padding_from_border"
        android:background="@drawable/bg_white_with_radius"
        android:orientation="vertical"
        android:padding="@dimen/padding_from_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_from_left_right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/delivery_addres"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_from_left_right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_delivery_address"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="( Delivery Address)"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/padding_from_border"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_from_border"
        android:layout_marginLeft="@dimen/padding_from_border"
        android:layout_marginRight="@dimen/padding_from_border"
        android:background="@drawable/bg_grey_with_radius"
        android:orientation="vertical"
        android:padding="@dimen/padding_from_border">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_from_left_right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_normal" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>