<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_with_radius"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_from_header"
        android:orientation="vertical"
        android:layout_margin="@dimen/padding_from_border"
        android:background="@drawable/bg_white_with_radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/eror"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/danger"
            android:textSize="@dimen/text_very_very_big"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/padding_from_header"
            android:layout_marginRight="@dimen/padding_from_header"
            android:layout_height="0.5dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/tv_pesan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_from_header"
            android:text="@string/allert_eror"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_normal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_tryagain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:paddingLeft="50dp"
                android:layout_centerHorizontal="true"
                android:paddingRight="50dp"
                android:text="@string/try_again"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/btn_process"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_primary"
                android:layout_marginTop="@dimen/padding_from_header"
                android:layout_below="@+id/btn_tryagain"
                android:paddingLeft="50dp"
                android:layout_centerHorizontal="true"
                android:paddingRight="50dp"
                android:textSize="@dimen/text_normal"
                android:text="Proses tanpa penerimaan"
                android:textColor="@color/white" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>