<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_from_border"
        android:paddingBottom="@dimen/padding_from_border"
        android:paddingLeft="@dimen/padding_from_header"
        android:paddingRight="@dimen/padding_from_header"
        android:background="@drawable/bg_white_with_radius"
        android:layout_marginTop="@dimen/margin_from_top_text"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/width_text_view"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textColor="@color/textPrimaryColor"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=": "/>
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="( Item name )"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/width_text_view"
                android:layout_height="wrap_content"

                android:text="@string/qty"
                android:textColor="@color/textPrimaryColor"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=": "/>
            <TextView
                android:id="@+id/tv_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="( Item name )"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/width_text_view"
                android:layout_height="wrap_content"

                android:text="@string/price_item"
                android:textColor="@color/textPrimaryColor"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=": "/>
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="( Price / item)"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/width_text_view"
                android:layout_height="wrap_content"

                android:text="@string/total_invoice"
                android:textColor="@color/textPrimaryColor"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=": "/>
            <TextView
                android:id="@+id/tv_total_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="( Price / item)"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>