<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/bggGray"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_from_left_right"
        android:layout_marginRight="@dimen/margin_from_left_right"
        android:layout_marginTop="@dimen/padding_from_border"
        android:background="@drawable/bg_white_with_radius"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_from_border"
            android:layout_marginLeft="@dimen/margin_from_left_right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=": "
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="( Item name )"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="@dimen/margin_from_left_right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=": "
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:id="@+id/tv_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="( qty + units )"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="@dimen/margin_from_left_right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/price_item"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=": "
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:id="@+id/tv_price_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="( Price / item)"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="@dimen/padding_from_border"
            android:background="@color/bggGray"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/total_purchase"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=": "
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <TextView
                android:id="@+id/tv_total_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="( Total Value )"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>